# green-comtrade-bench-v2

./: .agentbeats_trigger  Dockerfile.green  Dockerfile.mock  Makefile  README.md  agentbeats_leaderboard.sql  gen_fixtures.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-ghcr.yml
baseline_purple/: README.md  __init__.py  purple_agent.py  run.py
schemas/: data_record.schema.json  metadata.schema.json
scripts/: gen_fixtures.py  stage_fixtures.sh  validate_purple_output.py
src/: agent.py  agent_a2a.py  judge.py
