[project]
name = "green-comtrade-bench"
version = "1.0.0"
description = "Deterministic Comtrade-like benchmark for evaluating agent pagination, fault tolerance, and data quality handling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "a2a-sdk>=0.3.5",
    "starlette>=0.27.0",
    "sse-starlette>=1.6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
